--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="../WEB-Proj-01/style/style.css">
     <title>Proj01</title>
 </head>
@@ -17,12 +19,53 @@
         <div></div>
     </header>
     <nav>
-<ul class="clearfix">
-    <li><a href="#">Menu 1</a></li>
-    <li><a href="#">Menu 2</a></li>
-    <li><a href="#">Menu 3</a></li>
-</ul>
+        <ul class="clearfix">
+            <li><a href="#">Menu 1</a></li>
+            <li><a href="#">Menu 2</a></li>
+            <li><a href="#">Menu 3</a></li>
+        </ul>
     </nav>
+    <div class="blog clearfix">
+        <main>
+            <article class="clearfix">
+                <h1>Tytuł 1</h1>
+                <img src="https://cdn.pixabay.com/photo/2017/12/15/19/57/water-3021652_960_720.jpg" alt="Foto">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates modi laboriosam placeat quis
+                    quibusdam, animi et inventore aperiam dolores natus, iste, accusantium culpa dolorem fugit voluptas
+                    enim ut obcaecati voluptatibus!</p>
+            </article>
+            <article class="clearfix">
+                <h1>Tytuł 1</h1>
+                <img src="https://cdn.pixabay.com/photo/2017/12/15/19/57/water-3021652_960_720.jpg" alt="Foto">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates modi laboriosam placeat quis
+                    quibusdam, animi et inventore aperiam dolores natus, iste, accusantium culpa dolorem fugit voluptas
+                    enim ut obcaecati voluptatibus!</p>
+            </article>
+            <article class="clearfix">
+                <h1>Tytuł 1</h1>
+                <img src="https://cdn.pixabay.com/photo/2017/12/15/19/57/water-3021652_960_720.jpg" alt="Foto">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates modi laboriosam placeat quis
+                    quibusdam, animi et inventore aperiam dolores natus, iste, accusantium culpa dolorem fugit voluptas
+                    enim ut obcaecati voluptatibus!</p>
+            </article>
+        </main>
+        <aside>
+            <section class="contact">
+                <p class="title">Skontaktuj sie ze mną:</p>
+                <ul>
+                    <li><i class="fas fa-envelope"></i>
+                         KONTAKT@KONTAKT.PL</li>
+                    <li><i class="fas fa-mobile"></i> 555 666 777</li>
+                        <li>
+                            <i class="fab fa-facebook-square"></i>
+                            <a href="#"> Facebook</a></li>
+                </ul>
+            </section>
+        </aside>
+    </div>
+    <footer>
+        <p>Stopka</p>
+    </footer>
 
 </body>
 
