--- a/index.html
+++ b/index.html
@@ -53,13 +53,22 @@
             <section class="contact">
                 <p class="title">Skontaktuj sie ze mną:</p>
                 <ul>
-                    <li><i class="fas fa-envelope"></i>
-                         KONTAKT@KONTAKT.PL</li>
-                    <li><i class="fas fa-mobile"></i> 555 666 777</li>
-                        <li>
-                            <i class="fab fa-facebook-square"></i>
-                            <a href="#"> Facebook</a></li>
+                    <li><i class="fas fa-envelope fa-lg"></i>
+                        KONTAKT@KONTAKT.PL</li>
+                    <li><i class="fas fa-mobile fa-lg"></i> 555 666 777</li>
+                    <li>
+                        <i class="fab fa-facebook-square fa-lg"></i>
+                        <a href="#"> Facebook</a></li>
                 </ul>
+            </section>
+            <section class="news">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est obcaecati, quia, dolorum error et
+                    aliquam dignissimos dolor iure expedita, alias doloremque? Dolore suscipit accusamus laboriosam
+                    totam impedit voluptate qui.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem unde recusandae fugit numquam
+                    laboriosam consequatur deserunt magni iste quo eum voluptas at quasi error atque, itaque ex nam,
+                    nesciunt ipsum.
+                </p>
             </section>
         </aside>
     </div>
